third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16195_variant1.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking-lang-v2.2/lambda/bug_16195_variant1.move:2:22
  │
2 │     struct Func(|(||)|||u64) has copy, drop;
  │                 -    ^ Expected '|'
  │                 │
  │                 To match this '|'
