third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16195_variant1.move
module 0xc0ffee::m {
    struct Func(|(||)|||u64) has copy, drop;
    let _arg = || {};
    let f = Func(|_arg|||42);
    f()()
}
